<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/LL1"
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/user"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:src="@drawable/default_user" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="40dip"
            android:layout_toRightOf="@id/user"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/myprofile_user"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/username_label"
                android:lines="1"
                android:singleLine="true"
                android:text="Zhanglei"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_label"
                android:layout_marginTop="10dip"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/myprolie_level_label"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/userlevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/user_level_label"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/user_level_label"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/myprolie_level_youke"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lastlogin_profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:layout_marginTop="20dip"
            android:padding="4dip"
            android:text="@string/myprofile_lastlogin_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lastlogin_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:layout_marginTop="20dip"
            android:layout_toRightOf="@id/lastlogin_profile_label"
            android:padding="4dip"
            android:text="@string/myprolie_lastlogin_default"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/lastlogin_profile_label"
            android:layout_below="@id/lastlogin_profile_label"
            android:layout_marginTop="20dip"
            android:padding="4dip"
            android:text="@string/myprofile_add_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/lastlogin_profile"
            android:layout_alignTop="@id/add_label"
            android:layout_toRightOf="@id/add_label"
            android:padding="4dip"
            android:text="@string/myprole_add_dedefault"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/summary_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/add_label"
            android:layout_below="@id/add_label"
            android:layout_marginTop="20dip"
            android:padding="4dip"
            android:text="@string/myprole_summary_lable"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/add"
            android:layout_alignTop="@id/summary_label"
            android:layout_toRightOf="@id/summary_label"
            android:padding="4dip"
            android:text="@string/myprofile_summary_default"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>